# Optional features
option('docs',
  type: 'combo',
  choices: ['auto', 'true', 'false'],
  value: 'auto',
  description: 'build documentation'
)
option('gtk-doc',
  type: 'boolean',
  value: 'false',
  description: 'build gtk-doc reference',
)
option('gi-docgen',
  type: 'feature',
  value: 'auto',
  description: 'Build developer documentation (uses gi-docgen)'
)
option('workshop',
  type: 'boolean',
  value: 'false',
  description: 'build experimental operations'
)
option('introspection',
  type: 'combo',
  choices: ['auto', 'true', 'false'],
  value: 'false',
  description: 'gobject introspection .gir generation'
)
option('vapigen',
  type: 'feature',
  value: 'auto',
  description: 'Vala .vapi generation - depends on introspection'
)
option('win-debugging',
  type: 'combo',
  choices: ['native', 'dwarf'],
  value: 'native',
  description: 'Build with native/CodeView debug symbols or with DWARF'
)

# Build settings
option('parallel-tests',
  type: 'boolean',
  value: 'true',
  description: 'run tests in parallel or sequentially'
)

option('operation-test',
  type: 'boolean',
  value: 'false',
  description: 'include gegl-tester in test suite'
)

option('relocatable-bundle', type: 'combo', value: 'platform-default',
       description: 'build with resources considered bundled under the same prefix',
       choices: [ 'yes', 'no', 'platform-default' ]
)

# optional dependencies
option('gdk-pixbuf',    type: 'feature', value: 'disabled')
option('gexiv2',        type: 'feature', value: 'disabled')
option('graphviz',      type: 'feature', value: 'disabled')
option('jasper',        type: 'feature', value: 'disabled')
option('lcms',          type: 'feature', value: 'disabled')
option('lensfun',       type: 'feature', value: 'disabled')
option('libav',         type: 'feature', value: 'disabled')
option('libraw',        type: 'feature', value: 'disabled')
option('librsvg',       type: 'feature', value: 'disabled')
option('libspiro',      type: 'feature', value: 'disabled')
option('libtiff',       type: 'feature', value: 'disabled')
option('libv4l',        type: 'feature', value: 'disabled')
option('libv4l2',       type: 'feature', value: 'disabled')
option('lua',           type: 'feature', value: 'disabled')
option('mrg',           type: 'feature', value: 'disabled')
option('maxflow',       type: 'feature', value: 'disabled')
option('openexr',       type: 'feature', value: 'disabled')
option('openmp',        type: 'feature', value: 'disabled')
option('cairo',         type: 'feature', value: 'disabled')
option('pango',         type: 'feature', value: 'disabled')
option('pangocairo',    type: 'feature', value: 'disabled')
option('poppler',       type: 'feature', value: 'disabled')
option('pygobject',     type: 'feature', value: 'disabled')
option('sdl1',          type: 'feature', value: 'disabled')
option('sdl2',          type: 'feature', value: 'disabled')
option('umfpack',       type: 'feature', value: 'disabled')
option('webp',          type: 'feature', value: 'disabled')
